# wheelmatch

./: .env.example  .gitignore  AGENTS.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/bootstrap/: __init__.py  application.py
backend/app/core/: __init__.py  ids.py
backend/app/modules/: __init__.py
backend/app/workers/: __init__.py  consumer.py  main.py  outbox_relay.py  sqs.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_foundation.py  0002_identity_authorization.py  0003_phase2_catalogue_listings_media_location.py  0004_phase3_media_processing.py  0005_phase3_identity_verification.py  0006_phase3_vehicle_ownership.py  0007_phase3_listing_submission.py  0008_phase3_ownership_reuse.py
backend/scripts/: export_openapi.py  run-integration.ps1
backend/tests/: __init__.py
backend/tests/integration/: __init__.py  test_foundation.py  test_phase1_identity_authorization.py  test_phase2_catalogue_listings.py  test_phase3_identity_verification.py  test_phase3_listing_submission.py  test_phase3_media_processing.py  test_phase3_ownership_reuse.py  test_phase3_vehicle_ownership.py
backend/tests/unit/: __init__.py  test_async_adapters.py  test_authorization_policy.py  test_config.py  test_events.py  test_health_api.py  test_idempotency.py  test_identity_security.py  test_identity_verification.py  test_listing_submission_readiness.py  test_media_processing.py  test_ownership_reuse.py  test_phase1_contracts.py  test_phase2_catalogue.py  test_phase2_contracts.py  test_phase2_listing_policy.py  test_secrets_and_telemetry.py  test_vehicle_ownership_verification.py  (+1 more)
docs/: README.md  (+17 more)
(+125 files in other folders)
