[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheelmatch-backend"
version = "0.1.0"
description = "WheelMatch modular FastAPI backend"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.16,<2",
  "argon2-cffi>=23.1,<26",
  "asyncpg>=0.30,<1",
  "boto3>=1.39,<2",
  "fastapi>=0.116,<1",
  "orjson>=3.10,<4",
  "Pillow>=11.3,<13",
  "PyJWT>=2.10,<3",
  "pydantic-settings>=2.10,<3",
  "redis[hiredis]>=6.2,<8",
  "sentry-sdk[fastapi]>=2.33,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.4,<27",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires PostgreSQL/PostGIS and Redis",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "SIM", "UP"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 80
